add new users by admin feature working correctly now

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,12 +4,20 @@
   "private": true,
   "type": "commonjs",
   "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch"
+    "build": "tsup",
+    "dev": "tsup --watch"
   },
   "devDependencies": {
+    "tsup": "^8.0.2",
     "typescript": "^5.0.0"
   }
 }
