--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8.0.0",
     "husky": "^8.0.0",
     "prettier": "^3.0.0",
+    "tsup": "^8.4.0",
     "turbo": "^1.10.0",
     "typescript": "^5.0.0"
   },
