--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "concurrently": "^8.2.2",
     "eslint": "^8.0.0",
     "husky": "^8.0.0",
+    "lint-staged": "^15.4.3",
     "prettier": "^3.0.0",
     "tsup": "^8.4.0",
-    "turbo": "^1.10.0",
+    "turbo": "^2.4.4",
     "typescript": "^5.0.0"
   },
   "engines": {
