--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "type-check": "turbo run type-check",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check": "turbo run lint type-check format",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css,scss}\"",
+    "check": "turbo run lint type-check && prettier --check \"**/*.{js,jsx,ts,tsx,json,md,css,scss}\"",
     "db:up": "docker-compose up -d",
     "db:down": "docker-compose down",
     "db:reset": "docker-compose down -v && docker-compose up -d",
