update build script

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -44,13 +44,8 @@ jobs:
       - name: Check formatting
         run: npx prettier --check "**/*.{js,jsx,ts,tsx,json,md,css,scss}"
 
-      - name: Build depedency
-        run: npm run build:packages
-
-      - name: Build
-        run: npm run build
-
   deploy-production:
+    needs: code-quality
     runs-on: ubuntu-latest
     environment: production
     steps:
@@ -65,6 +60,12 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Build depedency
+        run: npm run build:packages
+
+      - name: Build
+        run: npm run build
 
       - name: Deploy API to Fly.io (Production)
         uses: superfly/flyctl-actions/setup-flyctl@master
