--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,20 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "npm run build:deps",
+    "build:deps": "cd ../.. && npm run build:packages",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:dev": "npm run build:deps && nest start --watch",
+    "start:debug": "npm run build:deps && nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "create:superadmin": "ts-node -r tsconfig-paths/register src/scripts/create-super-admin.ts"
+    "test": "npm run build:deps && jest",
+    "test:watch": "npm run build:deps && jest --watch",
+    "test:cov": "npm run build:deps && jest --coverage",
+    "test:debug": "npm run build:deps && node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "npm run build:deps && jest --config ./test/jest-e2e.json",
+    "create:superadmin": "npm run build:deps && ts-node -r tsconfig-paths/register src/scripts/create-super-admin.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
