update fly.io deployment

--- a/apps/api/fly.staging.toml
+++ b/apps/api/fly.staging.toml
@@ -1,6 +1,10 @@
 app = "supply-chain-system-api-staging"
 primary_region = "syd"
 
+[build]
+  dockerfile = "Dockerfile"
+  context = "../.."
+
 [env]
   NODE_ENV = "staging"
   PORT = "3001"
