--- a/apps/api/fly.toml
+++ b/apps/api/fly.toml
@@ -1,6 +1,10 @@
 app = "supply-chain-system-api"
 primary_region = "syd"
 
+[build]
+  dockerfile = "Dockerfile"
+  context = "../.."
+
 [env]
   NODE_ENV = "production"
   PORT = "3001"
