--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -61,18 +61,21 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build depedency
+      - name: Build dependency packages
         run: npm run build:packages
 
       - name: Build
         run: npm run build
 
-      - name: Deploy API to Fly.io (Production)
+      # Install Fly CLI
+      - name: Setup Flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
+
+      # Deploy to Fly.io
+      - name: Deploy API to Fly.io (Production)
+        run: flyctl deploy --config ./apps/api/fly.toml --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        with:
-          args: "deploy --config ./apps/api/fly.toml --remote-only"
 
       - name: Deploy Web to Vercel (Production)
         uses: amondnet/vercel-action@v20
@@ -81,10 +84,8 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: ./apps/web
+          root-directory: .
           vercel-args: "--prod"
-          alias-domains: |
-            your-domain.com
-            www.your-domain.com
 
       - name: Check deployment health
         id: health_check
@@ -107,4 +108,6 @@ jobs:
           # Rollback to previous version
           git checkout HEAD~1
           # Redeploy
-          npm run deploy
+          flyctl deploy --config ./apps/api/fly.toml --remote-only
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
