--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -62,18 +62,21 @@ jobs:
         run: npm ci
 
         # Build packages first to ensure types are available
-      - name: Build depedency
+      - name: Build dependency packages
         run: npm run build:packages
 
       - name: Build
         run: npm run build
 
-      - name: Deploy API to Fly.io (Staging)
+      # Install Fly CLI
+      - name: Setup Flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
+
+      # Deploy to Fly.io
+      - name: Deploy API to Fly.io (Staging)
+        run: flyctl deploy --config ./apps/api/fly.staging.toml --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        with:
-          args: "deploy --config ./apps/api/fly.staging.toml --remote-only"
 
       - name: Deploy Web to Vercel (Staging)
         uses: amondnet/vercel-action@v20
@@ -82,6 +85,5 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: ./apps/web
+          root-directory: .
           vercel-args: "--prod"
-          alias-domains: |
-            staging.your-domain.com
