update deployment pipeline script

--- a/.github/workflows/deployment-dashboard.yml
+++ b/.github/workflows/deployment-dashboard.yml
@@ -6,6 +6,11 @@ on:
     types:
       - completed
 
+# Add permissions for the GITHUB_TOKEN
+permissions:
+  contents: write
+  pages: write
+
 jobs:
   update-dashboard:
     runs-on: ubuntu-latest
