--- a/apps/api/fly.staging.toml
+++ b/apps/api/fly.staging.toml
@@ -16,6 +16,7 @@ primary_region = "syd"
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
+  processes = ["app"]
   
   [[http_service.checks]]
     interval = "10s"
