addeed permission to deployment pipeline

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -11,6 +11,11 @@ on:
         description: "Build ID to deploy (leave empty for latest successful build)"
         required: false
 
+# Add permissions block to allow artifact download
+permissions:
+  contents: read
+  actions: read # This is needed for downloading artifacts
+
 jobs:
   validate:
     runs-on: ubuntu-latest
@@ -35,12 +40,11 @@ jobs:
 
       # Download build info to get the latest build ID if not specified
       - name: Download build info
-        uses: dawidd6/action-download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
-          workflow: build.yml
           name: build-info
           path: .
-          if_no_artifact_found: warn
+          github-token: ${{ secrets.GITHUB_TOKEN }}
         if: github.event.inputs.build_id == ''
 
       # Set the build ID
@@ -65,6 +69,7 @@ jobs:
         with:
           name: api-deployment
           path: .
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       # Extract API deployment package
       - name: Extract API deployment package
@@ -91,6 +96,7 @@ jobs:
         with:
           name: web-deployment
           path: .
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       # Extract Web deployment package
       - name: Extract Web deployment package
