--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,12 @@
 name: Build Application
 
 on:
-  push:
-    branches: [main]
   workflow_dispatch:
+    inputs:
+      description:
+        description: "Description of this build (optional)"
+        required: false
+        type: string
 
 jobs:
   build:
