fix fly.io errors

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -160,8 +160,25 @@ jobs:
       - name: Deploy API to Fly.io (Production)
         if: steps.check_api.outputs.api_artifact_exists == 'true'
         run: |
+          echo "Deploying API to Fly.io..."
           cd deploy-api
+
+          # Create the directory structure expected by the Dockerfile
+          mkdir -p apps/api
+          mkdir -p packages/database
+          mkdir -p packages/shared
+          mkdir -p packages/ui
+
+          # Move files to the correct locations if needed
+          if [ -d "dist" ] && [ ! -d "apps/api/dist" ]; then
+            mkdir -p apps/api/dist
+            cp -r dist/* apps/api/dist/
+          fi
+
+          # Deploy using the appropriate fly.toml
           flyctl deploy --config fly.production.toml --remote-only
+
+          echo "API deployment completed"
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
