update fly.io deployments

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -2,14 +2,21 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-# Copy pre-built artifacts and dependencies
+# Copy package files for dependency installation
+COPY package.json package-lock.json ./
+COPY apps/api/package.json ./apps/api/
+COPY packages/database/package.json ./packages/database/
+COPY packages/shared/package.json ./packages/shared/
+COPY packages/ui/package.json ./packages/ui/
+
+# Install all dependencies including NestJS packages
+RUN npm ci --only=production
+
+# Copy pre-built artifacts
 COPY apps/api/dist/ ./apps/api/dist/
 COPY packages/database/dist/ ./packages/database/dist/
 COPY packages/shared/dist/ ./packages/shared/dist/
 COPY packages/ui/dist/ ./packages/ui/dist/
-
-# Copy only the node_modules needed by the API
-COPY node_modules/ ./node_modules/
 
 # Set working directory to the API app
 WORKDIR /app/apps/api
