--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,38 +62,29 @@ jobs:
           cp -r packages/shared/dist/* deploy-api/packages/shared/dist/
           cp -r packages/ui/dist/* deploy-api/packages/ui/dist/
 
-          # Create minimal node_modules with only API runtime dependencies
-          echo "Creating minimal node_modules for API runtime..."
+          # Copy package files for dependency installation
           cp package.json package-lock.json deploy-api/
           cp apps/api/package.json deploy-api/apps/api/
-          cd deploy-api
+          cp packages/database/package.json deploy-api/packages/database/
+          cp packages/shared/package.json deploy-api/packages/shared/
+          cp packages/ui/package.json deploy-api/packages/ui/
 
           # Temporarily modify package.json to remove husky and fix Node.js version requirement
           echo "Modifying package.json to remove husky and fix Node.js version..."
+          cd deploy-api
           jq 'del(.scripts.prepare) | if has("engines") then .engines.node = ">=20.0.0" else . + {"engines":{"node":">=20.0.0"}} end' package.json > package.json.tmp
           mv package.json.tmp package.json
           jq 'if has("engines") then .engines.node = ">=20.0.0" else . + {"engines":{"node":">=20.0.0"}} end' apps/api/package.json > apps/api/package.json.tmp
           mv apps/api/package.json.tmp apps/api/package.json
 
-          # Install only production dependencies needed by the API
-          npm ci --production --omit=dev --no-audit --no-fund
-
-          # Analyze and prune unnecessary packages (optional but recommended)
-          echo "Pruning unnecessary packages..."
-          npx depcheck --ignores="typescript,@types/*,husky" --json | jq -r '.dependencies[]' | xargs -r npm uninstall
-
-          # Compress node_modules to reduce artifact size
-          echo "Compressing node_modules..."
-          tar -czf node_modules.tar.gz node_modules
-          rm -rf node_modules
+          # Ensure NestJS dependencies are explicitly marked as production dependencies
+          echo "Ensuring NestJS dependencies are included..."
+          jq '.dependencies["@nestjs/config"] = "*" | .dependencies["@nestjs/common"] = "*" | .dependencies["@nestjs/core"] = "*"' apps/api/package.json > apps/api/package.json.tmp
+          mv apps/api/package.json.tmp apps/api/package.json
           cd ..
 
-          # Copy remaining files
+          # Copy Dockerfile and fly.toml files
           cp apps/api/Dockerfile deploy-api/Dockerfile
-          cp apps/api/package.json deploy-api/apps/api/
-          cp packages/database/package.json deploy-api/packages/database/
-          cp packages/shared/package.json deploy-api/packages/shared/
-          cp packages/ui/package.json deploy-api/packages/ui/
 
           # Create production fly.toml
           cat > deploy-api/fly.production.toml << EOL
