--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -116,6 +116,8 @@ jobs:
 
       - name: Deploy to Fly.io
         id: deploy
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         run: |
           cd deploy-api
 
