--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,7 +116,7 @@ jobs:
               protocol = "http"
 
           [processes]
-            app = "node dist/main.js"
+            app = "node dist/main"
           EOL
 
           # Create staging fly.toml
@@ -150,7 +150,7 @@ jobs:
               protocol = "http"
 
           [processes]
-            app = "node dist/main.js"
+            app = "node dist/main"
           EOL
 
           # Create a README with deployment instructions
