--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,7 @@
     "prebuild": "npm run build:deps",
     "build:deps": "cd ../.. && npm run build:packages",
     "build": "nest build",
+    "build:all": "npm run build:deps && npm run build",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
     "start:dev": "npm run build:deps && nest start --watch",
